# ChangeLog for app-emacs/ruby-mode
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/ruby-mode/ChangeLog,v 1.23 2007/02/08 23:41:06 opfer Exp $

  08 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
  -ruby-mode-1.8.0.ebuild, -ruby-mode-1.8.1.ebuild:
  clean up

  31 Jan 2007; Jeroen Roovers <jer@gentoo.org> ruby-mode-1.8.4.ebuild:
  Marked ~hppa (bug #156388).

  02 Jan 2007; Diego Pettenò <flameeyes@gentoo.org> ruby-mode-1.8.4.ebuild:
  Add ~sparc-fbsd keyword.

  23 Dec 2006; Bryan Østergaard <kloeri@gentoo.org> ruby-mode-1.8.4.ebuild:
  Add ~ia64 keyword, bug 156388.

  06 Dec 2006; Jason Wever <weeve@gentoo.org> ruby-mode-1.8.4.ebuild:
  Added ~sparc keyword wrt bug #156388.

  01 Dec 2006; Markus Rothe <corsair@gentoo.org> ChangeLog:
  Added ~ppc64; bug #156388

  07 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> ruby-mode-1.8.4.ebuild:
  Add ~x86-fbsd keyword.

  08 Mar 2006; Matthew Kennedy <mkennedy@gentoo.org>
  files/50ruby-mode-gentoo.el:
  Added inferior mode autoloads and add-to-list improvements for site-lisp
  configuration.

*ruby-mode-1.8.4 (05 Mar 2006)

  05 Mar 2006; Matthew Kennedy <mkennedy@gentoo.org>
  +ruby-mode-1.8.4.ebuild:
  New upstream version; Resolves Bug #124821.

  02 Dec 2005; Matthew Kennedy <mkennedy@gentoo.org>
  files/50ruby-mode-gentoo.el:
  Convert 50ruby-mode-gentoo.el DOS encoding to Unix; Resolves Bug #107462.

  21 Apr 2005; Simon Stelling <blubb@gentoo.org> ruby-mode-1.8.2.ebuild:
  stable on amd64

  10 Apr 2005; Michael Hanselmann <hansmi@gentoo.org>
  ruby-mode-1.8.2.ebuild:
  Stable on ppc.

  26 Mar 2005; Bryan Østergaard <kloeri@gentoo.org> ruby-mode-1.8.2.ebuild:
  Stable on alpha.

  21 Mar 2005; Mamoru KOMACHI <usata@gentoo.org> ruby-mode-1.8.2.ebuild:
  Stable on x86 and ppc-macos.

  16 Feb 2005; Mamoru KOMACHI <usata@gentoo.org>
  files/50ruby-mode-gentoo.el:
  Added ruby-mode to interpreter-mode-alist. This closes bug #82218.
