@@ -1,30 +1,22 @@
-# Copyright 1999-2005 Gentoo Foundation
+# Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/ruby-mode/Attic/ruby-mode-1.8.2.ebuild,v 1.5 2005/04/21 18:42:02 blubb Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/ruby-mode/Attic/ruby-mode-1.8.2.ebuild,v 1.6 2007/07/04 06:04:58 ulm Exp $
 
 inherit elisp
-
-IUSE=""
 
 DESCRIPTION="Emacs major mode for editing Ruby code"
 HOMEPAGE="http://www.ruby-lang.org/"
 SRC_URI="mirror://ruby/ruby-${PV}.tar.gz"
 
 LICENSE="GPL-2"
-
 SLOT="0"
-KEYWORDS="x86 alpha ppc ppc-macos amd64"
-DEPEND="virtual/emacs"
+KEYWORDS="x86 alpha ppc amd64"
+IUSE=""
 
-SITEFILE=50ruby-mode-gentoo.el
+SITEFILE=50${PN}-gentoo.el
 
 S="${WORKDIR}/ruby-${PV}/misc"
 
 src_compile() {
 	elisp-comp *.el || die
-}
-
-src_install() {
-	elisp-install ruby-mode *.el *.elc
-	elisp-site-file-install ${FILESDIR}/${SITEFILE}
 }
