@@ -1,6 +1,6 @@
 # Copyright 1999-2007 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/ruby-mode/Attic/ruby-mode-1.8.4.ebuild,v 1.8 2007/02/11 10:13:38 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/ruby-mode/Attic/ruby-mode-1.8.4.ebuild,v 1.9 2007/07/04 06:04:58 ulm Exp $
 
 inherit elisp
 
@@ -10,20 +10,13 @@ SRC_URI="mirror://ruby/ruby-${PV}.tar.gz"
 
 LICENSE="GPL-2"
 SLOT="0"
-KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc-macos ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~ppc ~ppc64 ~s390 ~sh ~sparc ~sparc-fbsd ~x86 ~x86-fbsd"
 IUSE=""
 
-DEPEND="virtual/emacs"
-
-SITEFILE=50ruby-mode-gentoo.el
+SITEFILE=50${PN}-gentoo.el
 
 S="${WORKDIR}/ruby-${PV}/misc"
 
 src_compile() {
 	elisp-comp *.el || die
-}
-
-src_install() {
-	elisp-install ruby-mode *.{el,elc}
-	elisp-site-file-install ${FILESDIR}/${SITEFILE}
 }
