@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/ruby-mode
 # Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/ruby-mode/ChangeLog,v 1.23 2007/02/08 23:41:06 opfer Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/ruby-mode/ChangeLog,v 1.24 2007/07/04 06:04:58 ulm Exp $
+
+  04 Jul 2007; Ulrich Mueller <ulm@gentoo.org> ruby-mode-1.8.2.ebuild,
+  ruby-mode-1.8.4.ebuild:
+  Remove redundant src_install. Drop ppc-macos keyword.
 
   08 Feb 2007; Christian Faulhammer <opfer@gentoo.org>
   -ruby-mode-1.8.0.ebuild, -ruby-mode-1.8.1.ebuild:
